src/components/Chat/EmoteMenu.scss
// Copyright 2022 Strims contributors
// SPDX-License-Identifier: AGPL-3.0-only

.emote_menu {
  height: min(calc(var(--chat-height) - 10px), 500px);
  width: min(calc(var(--chat-width) - 20px), 380px);
  border-radius: var(--border-radius-small);
  background: var(--color-slate-7);
  box-shadow: var(--shadow-elevation-2);
  display: flex;
  flex-direction: column;

  &__header {
    flex: 0 0 40px;
    border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
    box-shadow: var(--shadow-elevation-1);
    clip-path: inset(var(--border-radius-small) 0px -500px 0px);
    z-index: 1;
    display: flex;
    flex-direction: row;
  }

  &__main {
    flex: 1;
    display: flex;
    flex-direction: row;
  }

  &__nav {
    flex: 0 0 40px;
    background: var(--color-slate-5);
    border-bottom-left-radius: var(--border-radius-small);
  }

  &__body {
    flex: 1;
    display: flex;
    flex-direction: column;
  }

  &__footer {
    flex: 0 0 50px;
    background: var(--color-slate-6);
    border-bottom-right-radius: var(--border-radius-small);
    display: flex;
    flex-direction: row;
  }

  &__category {
    &__header {
      padding: 12px 0 4px 8px;
      text-transform: uppercase;
    }

    &__list {
      display: grid;
      grid-gap: 8px;
      grid-template-columns: repeat(auto-fill, minmax(28px, 1fr));
      margin: 0 12px 0 8px;

      &--emote {
        display: flex;
        flex-direction: column;
      }
    }

    &__list_row {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;

      &:only-child {
        justify-content: flex-start;
      }
    }

    &__list_item {
      cursor: pointer;

      &--emoji {
        line-height: 1.8rem;
      }
    }
  }

  &__close {
    flex: 0 0 32px;
    margin: 4px;
    display: none;

    svg {
      height: 24px;
      width: 24px;
    }
  }

  @at-root .layout--portable & {
    &__footer {
      display: none;
    }

    &__close {
      display: block;
    }
  }

  @at-root .layout--portable.layout--min_aspect_ratio_2 & {
    position: fixed;
    top: 10px;
    bottom: 10px;
    right: 10px;
    height: unset;
    width: 480px;
  }

  @at-root .layout--portable.layout--landscape_cw & {
    right: max(10px, env(safe-area-inset-right));
  }

  @at-root .layout--portable.layout--min_aspect_ratio_4 & {
    bottom: unset;
    height: calc(var(--layout-height) - 20px);
    width: calc(var(--layout-width) - 50px);
  }

  @at-root .layout--portable.layout--portrait.layout--min_aspect_ratio_0_6 & {
    height: calc(var(--layout-height) - 20px);
    margin-bottom: -50px;
  }
}

.emote_menu_search {
  background: var(--color-slate-10);
  border-radius: var(--border-radius-small);
  display: flex;
  flex-direction: row;
  align-items: center;
  margin: 6px 0 6px 6px;
  flex: 1;

  &__input {
    display: block;
    flex: 1;
    text-indent: 0.4rem;
    height: 1.8rem;
    width: 20px;
  }

  &__icon {
    flex: 0 0 24px;
    color: var(--color-slate-16);
    height: 1.4rem;
    width: 1.4rem;
  }
}

.emote_menu_skin_tones {
  flex: 0 0 32px;
  margin: 4px;
  text-align: center;

  &__dropdown {
    padding-top: 2px;
    border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;

    &--open {
      background: var(--color-slate-10);
      box-shadow: var(--shadow-elevation-2);
    }

    &__menu {
      background: var(--color-slate-10);
      border-radius: 0 0 var(--border-radius-small) var(--border-radius-small);
      width: 32px;
      padding-bottom: 4px;
      box-shadow: var(--shadow-elevation-2);
      clip-path: inset(0 -10px -10px -10px);
    }

    .chat__emoji {
      display: block;
      line-height: 1.2em;
      cursor: pointer;
      font-size: 24px;
    }
  }
}

.emote_menu_nav {
  display: flex;
  flex-direction: column;
  align-items: center;

  &__item {
    cursor: pointer;
    border-radius: var(--border-radius-small);
    padding: 4px;
    margin: 2px 0;
    line-height: 0;
    color: var(--color-grey-6);

    &--focus {
      color: var(--color-grey-15);
    }

    &:hover {
      background: var(--color-slate-10);
      color: var(--color-grey-12);
    }

    svg {
      height: 24px;
      width: 24px;
    }
  }
}

.emote_menu_preview {
  display: flex;
  flex-direction: row;
  flex: 1;
  align-items: center;

  &__image {
    margin: 0 0.4rem;
  }

  &__name,
  &__contributor {
    line-height: 1.2em;
  }

  &__contributor {
    font-size: 0.8rem;

    &__label {
      color: var(--color-grey-5);
      display: inline-block;
      margin-right: 0.2rem;
    }

    &__name {
      color: var(--color-grey-7);
    }
  }
}

